feat: code touch-up and allow image file name fetching

--- a/api.cfg
+++ b/api.cfg
@@ -1,3 +1,7 @@
+[Config]
+ip = "127.0.0.1"
+
 [Paths]
 cosplayers = "./data/cosplayers.json"
+cosplayerData = "./data/cosplayers"
 votes = "./data/votes.json"
